[package]
name = "bloom"
description = "Bloom filter implementation in rust using xxh3 for hashing"
version = "0.3.1"
authors = ["Nick Lanham <nick@afternight.org>", "Vitali Lovich <vlovich@gmail.com>"]
homepage = "https://github.com/vlovich/xx-bloom-rs"
documentation = "https://docs.rs/bloom/"
readme = "README.md"
keywords = ["bloom", "filter", "bloomfilter"]
license = "GPL-2.0"
edition = "2021"

[lib]
name = "bloom"

[dependencies]
bit-vec = "0.6.3"

[dev-dependencies]
rand = "0.3.14"

[features]
do-bench=[]

