[package]
name = "xx-bloom"
description = "Bloom filter implementation in rust using xxh3 for hashing"
version = "0.3.1"
authors = ["Nick Lanham <nick@afternight.org>", "Vitali Lovich <vlovich@gmail.com>"]
homepage = "https://github.com/vlovich/xx-bloom-rs"
documentation = "https://docs.rs/bloom/"
readme = "README.md"
keywords = ["bloom", "filter", "bloomfilter"]
license = "GPL-2.0"
edition = "2021"

[[bench]]
name = "bloom"
harness = false

[lib]
name = "xx_bloom"

[dependencies]
bit-vec = "0.6.3"
getrandom = "0.2.10"
xxhash-rust = { version = "0.8.6", default-features = false, features = ["xxh3"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.3.14"
